Fixed an issue with the header styling, which spilled over into the no hero header styling

--- a/src/web/themes/custom/workbc/scss/layout/_basic_page.scss
+++ b/src/web/themes/custom/workbc/scss/layout/_basic_page.scss
@@ -1,15 +1,19 @@
-.block-page-title-block h1 {
+.basic-page-header {
     @include underlined-header;
     margin: $workbc_default_spacing auto;
+}
+
+.no-hero-content-wrapper {
+    .no-hero-title h1 {
+        @include underlined-header;
+        margin: $workbc_default_spacing auto;
+    }
 }
 
 // a lot of these styles probably needs to be expanded to a generic 'basic page' instead of being specific to these three nodes types, but we don't have those other pages in place yet
 .node--type-success-story,
 .node--type-news,
 .node--type-blog {
-    max-width: $workbc_article_width;
-    margin: auto;
-    padding-top: $workbc_default_spacing;
 
     .field--name-extra-field-workbc-page-title {
         @include underlined-header;
